--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   </style>
 </head>
 <body>
-  <img src="image.jpg" alt="Static image">
+  <img src="cix.png" alt="Static image">
 </body>
 </html>
