--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Static Image</title>
   <style>
     html, body {
-      height: 100%;
       margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      overflow: hidden;
       background-color: #000;
     }
     img {
-      max-width: 100%;
-      max-height: 100%;
-      object-fit: contain;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: center center;
     }
   </style>
 </head>
 <body>
-  <img src="cix.png" alt="Static image">
+  <img src="image.jpg" alt="Full screen image">
 </body>
 </html>
